fixed spacing and classes issues

--- a/index.html
+++ b/index.html
@@ -1,65 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    	<title>Portfolio</title>
-    	<meta name="description" content="Portfolio project">
-    	<meta name="author" content="Carlos Gutierrez">
+	<title>Portfolio</title>
+	<meta name="description" content="Portfolio project">
+	<meta name="author" content="Carlos Gutierrez">
 
-    	<!--CSS-->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-    	<link rel="stylesheet" href="css/main.css">
-    </head>
+	<!--CSS-->
+   <link rel="stylesheet" href="css/bootstrap.min.css">
+   <link rel="stylesheet" href="css/main.css">
+</head>
 
-    <body>
-    	<div id="container">
-            <!--TOP-->
-            <div class="top col-md-offset-1 col-md-10">
-    		  <header class="site-header text-center">
-                <img src="img/logo.png" alt="logo" class="logo">
-                <h1>Carlos Guti&eacute;rrez</h1>
-                <h3>Front-End Ninja</h3>
-              </header>
-            </div>
+<body>
+	<div id="container">
+        <!--TOP-->
+        <div class="top col-md-offset-1 col-md-10">
+    		<header class="site-header text-center">
+                <img src="img/logo.png" alt="Udacity's logo" class="logo">
+                <h1 class="site-header-h1">Carlos Gutiérrez</h1>
+                <h3 class="site-header-h3">Front-End Ninja</h3>
+            </header>
+        </div>
 
-            <!--Main Image-->
-            <div class="col-md-offset-1 col-md-10">
-                <img class="img" src="img/bg.jpg" height="420" width="900" alt="code img">
-            </div>
-
-            <!--Bottom Part-->
-            <div class="bottom col-md-offset-1 col-md-10">
-                <h1>Featured Work</h1>
-                <div class="section-content">
-                    <div class="row text-center">
-                        <div class="col-lg-4 col-md-4">
-                            <img src="img/Responsive.png" height="300" width="300" class="image" alt="devices">
-                            <h1>Project 0</h1>
-                            <p class="paragraph"><a href="http://github.com/CarlosG94/FEND-P0" target="_blank">FEND-P0</a></p>
-                        </div>
-                        <div class="col-lg-4 col-md-4">
-                            <img src="img/Development.png" height="300" width="300" class="image" alt="development">
-                            <h1>Project 1</h1>
-                            <p class="paragraph"><a href="http://github.com/CarlosG94/FEND-P1" target="_blank">FEND-P1</a></p>
-                        </div>
-                        <div class="col-lg-4 col-md-4">
-                            <img src="img/Code.png" height="300" width="300" class="image" alt="code">
-                            <h1>Project 2</h1>
-                            <p class="paragraph">Link</p>
-                        </div>
-                    </div>
+        <!--Main Image-->
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-offset-1 col-md-10">
+                    <img class="img" src="img/bg.jpg" height="420" width="900" alt="code img">
                 </div>
             </div>
         </div>
 
-    <!--JS-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
+        <!--Bottom Part-->
+        <div class="bottom col-md-offset-1 col-md-10">
+            <h1>Featured Work</h1>
+            <div class="row text-center">
+                <div class="col-lg-4 col-md-4">
+                    <img src="img/Responsive.png" height="300" width="300" class="image" alt="devices">
+                    <h1 class="bottom-h1">Project 0</h1>
+                    <p class="paragraph"><a href="http://github.com/CarlosG94/FEND-P0" target="_blank">FEND-P0</a></p>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                    <img src="img/Development.png" height="300" width="300" class="image" alt="development">
+                    <h1 class="bottom-h1">Project 1</h1>
+                    <p class="paragraph"><a href="http://github.com/CarlosG94/FEND-P1" target="_blank">FEND-P1</a></p>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                    <img src="img/Code.png" height="300" width="300" class="image" alt="code">
+                    <h1 class="bottom-h1">Project 2</h1>
+                    <p class="paragraph">Link</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    </body>
+<!--JS-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
+
+</body>
 </html>
 
 
