--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 	<meta name="author" content="Carlos Gutierrez">
 
 	<!--CSS-->
-   <link rel="stylesheet" href="css/bootstrap.min.css">
-   <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
-
 <body>
-	<div id="container">
+    <div id="container">
         <!--TOP-->
-        <div class="top col-md-offset-1 col-md-10">
-    		<header class="site-header text-center">
-                <img src="img/logo.png" alt="Udacity's logo" class="logo">
-                <h1 class="site-header-h1">Carlos Gutiérrez</h1>
-                <h3 class="site-header-h3">Front-End Ninja</h3>
-            </header>
+        <div class="row">
+            <div class="top col-md-offset-1 col-md-10">
+    		    <header class="site-header text-center">
+                    <img src="img/logo.png" alt="Udacity's logo" class="logo">
+                    <h1 class="site-header-h1">Carlos Gutiérrez</h1>
+                    <h3 class="site-header-h3">Front-End Ninja</h3>
+                </header>
+            </div>
         </div>
 
         <!--Main Image-->
@@ -57,9 +58,9 @@
         </div>
     </div>
 
-<!--JS-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
+    <!--JS-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
 
 </body>
 </html>
