fixed container issues

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div id="container">
+    <div class="container">
         <!--TOP-->
         <div class="row">
-            <div class="top col-md-offset-1 col-md-10">
+            <div class="top col-md-12">
     		    <header class="site-header text-center">
                     <img src="img/logo.png" alt="Udacity's logo" class="logo">
                     <h1 class="site-header-h1">Carlos Gutiérrez</h1>
@@ -27,18 +27,16 @@
         </div>
 
         <!--Main Image-->
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-offset-1 col-md-10">
-                    <img class="img" src="img/bg.jpg" height="420" width="900" alt="code img">
-                </div>
+        <div class="row">
+            <div class="col-md-12">
+                <img class="img" src="img/bg.jpg" height="420" width="900" alt="code img">
             </div>
         </div>
 
         <!--Bottom Part-->
-        <div class="bottom col-md-offset-1 col-md-10">
+        <div class="bottom row">
             <h1>Featured Work</h1>
-            <div class="row text-center">
+            <div class="text-center">
                 <div class="col-lg-4 col-md-4">
                     <img src="img/Responsive.png" height="300" width="300" class="image" alt="devices">
                     <h1 class="bottom-h1">Project 0</h1>
