--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <div class="container">
         <!--TOP-->
-        <div class="row">
-            <div class="top col-md-12">
+        <div class="top row">
+            <div class="col-md-12">
     		    <header class="site-header text-center">
                     <img src="img/logo.png" alt="Udacity's logo" class="logo">
                     <h1 class="site-header-h1">Carlos Gutiérrez</h1>
@@ -39,17 +39,17 @@
             <div class="text-center">
                 <div class="col-lg-4 col-md-4">
                     <img src="img/Responsive.png" height="300" width="300" class="image" alt="devices">
-                    <h1 class="bottom-h1">Project 0</h1>
+                    <h2 class="bottom-h2">Project 0</h2>
                     <p class="paragraph"><a href="http://github.com/CarlosG94/FEND-P0" target="_blank">FEND-P0</a></p>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <img src="img/Development.png" height="300" width="300" class="image" alt="development">
-                    <h1 class="bottom-h1">Project 1</h1>
+                    <h2 class="bottom-h2">Project 1</h2>
                     <p class="paragraph"><a href="http://github.com/CarlosG94/FEND-P1" target="_blank">FEND-P1</a></p>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <img src="img/Code.png" height="300" width="300" class="image" alt="code">
-                    <h1 class="bottom-h1">Project 2</h1>
+                    <h2 class="bottom-h2">Project 2</h2>
                     <p class="paragraph">Link</p>
                 </div>
             </div>
